[#56226998] fix avatar preview distortion

--- a/app/assets/stylesheets/users.css.sass
+++ b/app/assets/stylesheets/users.css.sass
@@ -9,9 +9,7 @@ body.users.edit
       .avatar
         margin-top: 1em
         img
-          +border-radius(100%)
           width: 150px          
-          height: 150px
       .file-btn
         margin-top: 1em
         position: relative
